--- a/index.html
+++ b/index.html
@@ -131,27 +131,38 @@
                 <h2 class="text-2xl font-bold text-center">Sign In</h2>
                 <p class="text-center text-gray-400">Welcome back to NamasteAI</p>
                 <div id="signin-message" class="text-center text-sm mt-2"></div>
-                <div class="space-y-4 mt-4">
-                    <div>
-                        <input type="email" id="signin-email-input" placeholder="Email Address"
-                            class="w-full px-3 py-2 text-white bg-gray-700 border border-gray-600 rounded-md">
+                
+                <!-- Step 1: Email/Password or Email Link -->
+                <div id="signin-step-1">
+                    <div class="space-y-4 mt-4">
+                        <div>
+                            <input type="email" id="signin-email-input" placeholder="Email Address"
+                                class="w-full px-3 py-2 text-white bg-gray-700 border border-gray-600 rounded-md">
+                        </div>
+                        <div>
+                            <input type="password" id="signin-password-input" placeholder="Password"
+                                class="w-full px-3 py-2 text-white bg-gray-700 border border-gray-600 rounded-md">
+                        </div>
+                        <button id="signin-btn"
+                            class="w-full py-2 font-semibold text-white bg-blue-600 rounded-md hover:bg-blue-700">Sign
+                            In</button>
+                        <div class="relative flex py-2 items-center">
+                            <div class="flex-grow border-t border-gray-600"></div>
+                            <span class="flex-shrink mx-4 text-gray-400 text-sm">or</span>
+                            <div class="flex-grow border-t border-gray-600"></div>
+                        </div>
+                        <button id="signin-email-link-btn"
+                            class="w-full py-2 font-semibold text-white bg-gray-600 rounded-md hover:bg-gray-700">Sign
+                            In with Email Link</button>
                     </div>
-                    <div>
-                        <input type="password" id="signin-password-input" placeholder="Password"
-                            class="w-full px-3 py-2 text-white bg-gray-700 border border-gray-600 rounded-md">
-                    </div>
-                    <button id="signin-btn"
-                        class="w-full py-2 font-semibold text-white bg-blue-600 rounded-md hover:bg-blue-700">Sign
-                        In</button>
-                    <div class="relative flex py-2 items-center">
-                        <div class="flex-grow border-t border-gray-600"></div>
-                        <span class="flex-shrink mx-4 text-gray-400 text-sm">or</span>
-                        <div class="flex-grow border-t border-gray-600"></div>
-                    </div>
-                    <button id="signin-email-link-btn"
-                        class="w-full py-2 font-semibold text-white bg-gray-600 rounded-md hover:bg-gray-700">Sign
-                        In with Email Link</button>
                 </div>
+
+                <!-- Step 2: Check Email Message -->
+                <div id="signin-step-2" class="hidden text-center mt-4">
+                    <p class="text-green-400">A sign-in link has been sent to your email address.</p>
+                    <p class="text-gray-400 text-sm mt-2">Please check your inbox and click the link to sign in.</p>
+                </div>
+
                 <p class="mt-6 text-center text-sm">
                     Don't have an account?
                     <a href="#" id="show-signup-view" class="font-medium text-blue-400 hover:underline">Sign Up</a>
