--- a/index.html
+++ b/index.html
@@ -207,6 +207,13 @@
                     <a href="#" id="show-signin-view" class="font-medium text-blue-400 hover:underline">Sign In</a>
                 </p>
             </div>
+            
+            <!-- Verification Success View -->
+            <div id="verification-success-view" class="hidden text-center">
+                <h2 class="text-2xl font-bold text-green-400">Verification Successful!</h2>
+                <p class="text-gray-300 mt-4">You are now signed in on your other device.</p>
+                <p class="text-gray-400 text-sm mt-2">You can close this window.</p>
+            </div>
         </div>
     </div>
 
